--- a/app/views/projets/index.html.erb
+++ b/app/views/projets/index.html.erb
@@ -6,7 +6,7 @@
       <th>Description</th>
       <th>Sujet</th>
       <th>Date rendu</th>
-      <th>Creator</th>
+      <th>Créateur</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +17,15 @@
         <td><%= projet.description %></td>
         <td><%= projet.sujet %></td>
         <td><%= projet.date_rendu %></td>
-        <td><%= projet.creator %></td>
+        <td>
+			<table>
+				<tbody>
+					<% projet.projetToUserLinks.each do |projetToUserLink| %>
+						<tr><td><%= link_to projetToUserLink.user.nom + " " + projetToUserLink.user.prenom, projetToUserLink.user %></td></tr>
+					<% end %>
+				</tbody>
+			</table>
+		</td>
         <td><%= link_to 'Show', projet %></td>
         <td><%= link_to 'Edit', edit_projet_path(projet) %></td>
         <td><%= link_to 'Destroy', projet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
