--- a/app/views/projets/show.html.erb
+++ b/app/views/projets/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @projet.description %>
-</p>
+<h1><%= @projet.sujet %></h1>
 
-<p>
-  <strong>Sujet:</strong>
-  <%= @projet.sujet %>
-</p>
+<table>
+	<tbody>
+		<% @projet.projetToUserLinks.each do |projetToUserLink| %>
+			<tr><td><%= link_to projetToUserLink.user.nom + " " + projetToUserLink.user.prenom, projetToUserLink.user %></td></tr>
+		<% end %>
+	</tbody>
+</table>
 
 <p>
   <strong>Date rendu:</strong>
@@ -16,9 +16,41 @@
 </p>
 
 <p>
-  <strong>Creator:</strong>
-  <%= @projet.creator %>
+  <strong>Description:</strong><br/>
+  <%= @projet.description %>
 </p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Nom</th>
+      <th>Date</th>
+	  <% if @projet.rendus.first.note != nil %>
+		<th>Note</th>
+	  <% end %>
+	</tr>
+  </thead>
+  <tbody>
+	<% @projet.rendus.each do |rendu| %>
+		<% users = rendu.renduToUserLinks %>
+		<tr>
+			<td>
+				<% users.each do |renduToUserLink| %>
+					<table>
+						<tbody>
+							<td><td><%= link_to renduToUserLink.user.nom + " " + renduToUserLink.user.prenom, renduToUserLink.user %></td></td>
+						</tbody>
+					</table>
+				<% end %>
+			</td>
+			<td><%= rendu.created_at %></td>
+			<% if @projet.rendus.first.note != nil %>
+				<td><%= rendu.note %></td>
+			<% end %>
+		</tr>
+	<% end %>
+  </tbody>
+</table>
 
 <%= link_to 'Edit', edit_projet_path(@projet) %> |
 <%= link_to 'Back', projets_path %>
