--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :mail %><br>
     <%= f.text_field :mail %>
   </div>
+  <div class="field">
+    <%= f.label :password %><br>
+    <%= f.password_field :password %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
