Ajout de la fonction d'uplaod

--- a/app/views/rendus/_form.html.erb
+++ b/app/views/rendus/_form.html.erb
@@ -12,8 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :note %><br>
-    <%= f.number_field :note %>
+    <%= start_form_tag ({:action => 'uploadFile'}, 
+                        :multipart => true) %>
+	<p><label for="upload_file">Select File</label> : 
+	<%= file_field 'upload', 'datafile' %></p>
   </div>
   <div class="actions">
     <%= f.submit %>
