--- a/app/views/rendus/show.html.erb
+++ b/app/views/rendus/show.html.erb
@@ -8,6 +8,7 @@
 			<% end %>
 		</tbody>
 	</table>
+	<a href="<% @rendu.dataFilePath %>">Data</a>
   <strong>Note:</strong>
   <%= @rendu.note %>
 </p>
