--- a/app/views/projets/show.html.erb
+++ b/app/views/projets/show.html.erb
@@ -52,5 +52,6 @@
 	  </tbody>
 	</table>
 <% end %>
+<%= link_to 'Rendre', new_rendu_path(@projet.id) %> 
 <%= link_to 'Edit', edit_projet_path(@projet) %> |
 <%= link_to 'Back', projets_path %>
